dataset1235/2025-2/2318198438/users/473799190/executions/1897677159_2667036473.log
== SUBMISSION (2025-08-21 01:10:22)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15
print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:09:19)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:08:01)
-- CODE: 
Celsius = float(input ('Celsius: '))
Kelvin = Celsius + 275.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Celsius: 295.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Celsius: 265.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Celsius: 235.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Celsius: 375.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Celsius: 275.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Celsius: 305.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:07:07)
-- CODE: 
Celsius = float (input ('Celsius: '))
Kelvin = Celsius + 275.15

print(round(Kelvin,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Celsius: 295.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Celsius: 265.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Celsius: 235.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Celsius: 375.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Celsius: 275.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Celsius: 305.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:10:23)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15
print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:06:26)
-- CODE: 
Celsius = float (input ("Celsius: ")
Kelvin = Celsius + 275.15

print(round(Kelvin,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ("Celsius: ")
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ("Celsius: ")
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ("Celsius: ")
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ("Celsius: ")
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ("Celsius: ")
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ("Celsius: ")
                    ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:08:01)
-- CODE: 
Celsius = float(input ('Celsius: '))
Kelvin = Celsius + 275.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Celsius: 295.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Celsius: 265.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Celsius: 235.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Celsius: 375.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Celsius: 275.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Celsius: 305.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:11:16)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
celsius: 303.65
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:05:54)
-- CODE: 
Celsius = float (input ('Celsius: ')
Kelvin = Celsius + 275.15

print (round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:07:05)
-- CODE: 
Celsius = float (input ('Celsius: '))
Kelvin = Celsius + 275.15

print(round(Kelvin,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Celsius: 295.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Celsius: 265.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Celsius: 235.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Celsius: 375.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Celsius: 275.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Celsius: 305.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:10:07)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:05:30)
-- CODE: 
Celsius = float (input (Celsius)
Kelvin = Celsius + 275.15

print (round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = float (input (Celsius)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input (Celsius)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input (Celsius)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input (Celsius)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input (Celsius)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = float (input (Celsius)
                    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:06:27)
-- CODE: 
Celsius = float (input ("Celsius: ")
Kelvin = Celsius + 275.15

print(round(Kelvin,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ("Celsius: ")
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ("Celsius: ")
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ("Celsius: ")
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ("Celsius: ")
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ("Celsius: ")
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ("Celsius: ")
                    ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:07:59)
-- CODE: 
Celsius = float(input ('Celsius: '))
Kelvin = Celsius + 275.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Celsius: 295.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Celsius: 265.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Celsius: 235.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Celsius: 375.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Celsius: 275.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Celsius: 305.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:05:31)
-- CODE: 
Celsius = float (input (Celsius)
Kelvin = Celsius + 275.15

print (round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = float (input (Celsius)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input (Celsius)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input (Celsius)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input (Celsius)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input (Celsius)
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = float (input (Celsius)
                    ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:10:50)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15
print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:08:00)
-- CODE: 
Celsius = float(input ('Celsius: '))
Kelvin = Celsius + 275.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Celsius: 295.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Celsius: 265.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Celsius: 235.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Celsius: 375.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Celsius: 275.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Celsius: 305.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:10:11)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:09:20)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:10:50)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15
print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:09:21)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:07:41)
-- CODE: 
Celsius = float(input ('Celsius: '))
Kelvin = Celsius + 275.15

print(round(Kelvin,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Celsius: 295.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Celsius: 265.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Celsius: 235.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Celsius: 375.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Celsius: 275.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Celsius: 305.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:08:00)
-- CODE: 
Celsius = float(input ('Celsius: '))
Kelvin = Celsius + 275.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Celsius: 295.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Celsius: 265.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Celsius: 235.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Celsius: 375.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Celsius: 275.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Celsius: 305.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:08:52)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 275.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:10:12)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:06:11)
-- CODE: 
Celsius = float (input ('Celsius: ')
Kelvin = Celsius + 275.15

print(round(Kelvin,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:10:49)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15
print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:08:32)
-- CODE: 
celsius = float(input ('celsius: '))
kelvin = celsius + 275.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:11:13)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15
print(round(kelvin, 2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
celsius: 293.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
celsius: 263.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
celsius: 233.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
celsius: 373.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
celsius: 273.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
celsius: 303.65
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:08:30)
-- CODE: 
celsius = float(input ('celsius: '))
kelvin = celsius + 275.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:09:20)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:10:54)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15
print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:07:58)
-- CODE: 
Celsius = float(input ('Celsius: '))
Kelvin = Celsius + 275.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
---- user output:
Celsius: 295.4
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
---- user output:
Celsius: 265.15
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
---- user output:
Celsius: 235.15
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
---- user output:
Celsius: 375.15
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
---- user output:
Celsius: 275.15
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
---- user output:
Celsius: 305.65
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:09:22)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:06:06)
-- CODE: 
Celsius = float (input ('Celsius: ')
Kelvin = Celsius + 275.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:09:26)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:05:53)
-- CODE: 
Celsius = float (input ('Celsius: ')
Kelvin = Celsius + 275.15

print (round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:05:52)
-- CODE: 
Celsius = float (input ('Celsius: ')
Kelvin = Celsius + 275.15

print (round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
File "XXXX", line 1
    Celsius = float (input ('Celsius: ')
                    ^
SyntaxError: '(' was never closed
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:10:51)
-- CODE: 
celsius = float(input('celsius: '))
kelvin = celsius + 273.15
print(round(Kelvin, 2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 01:08:31)
-- CODE: 
celsius = float(input ('celsius: '))
kelvin = celsius + 275.15

print(round(Kelvin, 2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
20.25
---- correct output:
293.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 2:
---- input:
-10.0
---- correct output:
263.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 3:
---- input:
-40.0
---- correct output:
233.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 4:
---- input:
100.0
---- correct output:
373.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 5:
---- input:
0.0
---- correct output:
273.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- TEST CASE 6:
---- input:
30.5
---- correct output:
303.65
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(Kelvin, 2))
                ^^^^^^
NameError: name 'Kelvin' is not defined. Did you mean: 'kelvin'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
